--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root{
+  --primaryColor:#e879f9;
+  --secondaryColor:#fae8ff;
+  --primaryBtncolor:#4a044e;
+  --secondaryBtnColor:#e879f9;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.primaryBtn{
+  background-color: var(--primaryBtncolor);
+  color:white;
+  width:20rem;
+  padding:8px;
+  font-weight: 800;
+  font-size: larger;
+  border:none;
+  border-radius: 20px;  
+  cursor: pointer;
 }
