--- a/src/components/css/profileCard.css
+++ b/src/components/css/profileCard.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr 2rem 10rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
-    background-color: #f1f5f9;
+    background-color: var(--secondaryBgColor);
     padding:1rem;;
     grid-column-gap: 10px;
+    color: var(--primaryTextColor);
 }
 .profile-pic{
     align-self: center; 
@@ -31,15 +32,18 @@
 .profileDetails h1{
     margin-block-start: 0;
     margin-block-end: 0;
-    color: var(--primaryBtncolor);
+    color: var(--secondaryTextColor);
 }
 .profileDetails p{
     /* margin-block-end: 0; */
     margin-block-start: 0;
     text-align: left;
 }
+.profileDetails a{
+    color: var(--primaryTextColor);
+}
 .profileDetails p:first-of-type{
-   color: gray;
+   color: #8CA3B8;
    text-align: center;
 }
 .followersBtn{
@@ -50,7 +54,7 @@
     margin-top: 2rem;
     border:none;
     background-color: inherit;
-    color: var(--primaryBtncolor);
+    color: var(--primaryTextColor);
     cursor: pointer;
     font-size: 16px;
     text-decoration: underline;
