--- a/src/components/css/commentBox.css
+++ b/src/components/css/commentBox.css
@@ -1,18 +1,19 @@
 .comment-box{
     display: flex;
     gap:1rem;
-    width:80%;
+   width:30%;
     flex-direction: column;
     position: absolute;
     z-index: 1;
-    left:10%;
+    left:30%;
     right: 0;
     top:30%;
     padding: 1rem;;
-    background-color: #f3f4f6;
+    background-color: var(--secondaryBgColor);
     border-radius: 20px;
     /* opacity: 95%; */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    box-sizing: border-box;
 }
 .commentBody{
     display: flex;
