--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -1,6 +1,10 @@
-.navbar{
+@import '../../variables.css';
 
-    border-bottom:2px solid gray;
+
+.navbar{
+    background-color: var(--navbarBgColor);
+    color:var(--secondaryTextColor);
+    border-bottom:2px solid var(--primaryBorderColor);
     position: sticky;
     top:0;
     left:0;
@@ -13,10 +17,10 @@
 
 .navbar h3{
     margin-block-end: 0;
-    color:var(--primaryBtncolor)
+    color:var(--secondaryTextColor)
 }
 .navbar p{
-    color:var(--primaryBtncolor);
+    color:var(--secondaryTextColor);
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -46,5 +50,12 @@
 .navbar-profile img{
     width:3rem;
     border-radius: 50%;
+    cursor: pointer;
+}
+.themeIcon{
+    background-color: inherit;
+    border:none;
+    font-size: larger;
+    color: var(--secondaryTextColor);
     cursor: pointer;
 }
