--- a/src/components/css/editProfileModal.css
+++ b/src/components/css/editProfileModal.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top:10%;
-    left:35%;
+    /* mobile */
+    top:30%;
+    left:1rem;
+    /* mobile */
     box-sizing: border-box;
     min-width: 20%;
 
@@ -29,9 +31,7 @@
     font-size: 16px;
     font-weight: 500;
 }
-.profileImage{
 
-}
 .profileImage img{
     width: 8rem;
     border-radius:50%;
@@ -52,6 +52,12 @@
     display: none;
 }
 .edit-feilds{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    overflow-x:hidden ;
 }
 .edit-feilds label{
     display: flex;
@@ -60,7 +66,7 @@
     padding:10px;
 }
 .edit-feilds input{
-    width:100%;
+
     border:none;
     background-color: inherit;
     height: 2rem;
@@ -79,9 +85,19 @@
     background-color: inherit;
     border: none;
     border: 2px solid var(--primaryBtncolor);
-    width: 85%;
+    width: 100%;
     color: white;
     font-weight: 600;
     font-size: large;
 }
 
+@media screen  and (min-width:678px) {
+    .edit-profile{
+        top:10%;
+        left:30%;
+        z-index: 1000;
+        overflow-y: auto;
+    }
+
+    
+}
