--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -10,22 +10,34 @@
     left:0;
     width:100%;
     z-index: 999;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+   display: flex;
+        /* mobile */
+        flex-direction: column;
+        align-items: center;
+        justify-content:center ;
+        /* mobile */
 }
 
+.navbar-center{
+    display: flex;
+    flex-direction: column;
+
+}
+
+
 .navbar h3{
+    display: inline;
     margin-block-end: 0;
     color:var(--secondaryTextColor)
 }
 .navbar p{
+    display: inline;
     color:var(--secondaryTextColor);
     margin-block-start: 0;
     margin-block-end: 0;
 }
 .navbar .navbar-center{
-    transform: translateX(40%);
+    /* transform: translateX(40%); */
 }
 .navbar .logo{
     justify-self: flex-start;
@@ -35,12 +47,11 @@
     width:2rem;
 }
 .navbar-profile{
-    justify-self: flex-end;
     display: flex;
     align-items: center;
     gap:2rem;
     font-size: 1.5rem;
-    transform: translateX(-50%);
+   
     font-size: 25px;
 }
 .navbar-profile .icon{
@@ -58,4 +69,22 @@
     font-size: larger;
     color: var(--secondaryTextColor);
     cursor: pointer;
+}
+
+@media screen and (min-width:678px) {
+
+    .navbar{
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navbar-center{
+         transform: translateX(40%);
+    }
+
+    .navbar-profile{
+         transform: translateX(-50%);
+    }
+    
 }
