--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -45,6 +45,7 @@
 .navbar .logo img{
     border-radius: 50%;
     width:2rem;
+    height:2rem;
 }
 .navbar-profile{
     display: flex;
@@ -60,6 +61,7 @@
 
 .navbar-profile img{
     width:3rem;
+    height:3rem;
     border-radius: 50%;
     cursor: pointer;
 }
